Put repo description above comets to fix hovering layout problems.

--- a/css/main.styl
+++ b/css/main.styl
@@ -191,10 +191,11 @@ svg
                 fill: #999
                 font-size: 0.9em
 
-            &.description
+            .description
+                opacity: 0
                 font-size: 0.8rem
 
-        &:hover text
+        &:hover .description
             opacity: 1
 
         rect
